tests/error/class-12.moc
@class Point {
    int x;
    int y;
}

+(id)test {
    [super x];
}

@end
